--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>React Redux Boilerplate</title>
   <link rel="stylesheet" href="main.css">
 </head>
+<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <body>
   <div id="app"></div>
 
